<resources>
    <string name="app_name">Sim Info</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="simSerialNumber">Sim serial number</string>
    <string name="simCountryCode">Country Code</string>
    <string name="simState">Sim State</string>
    <string name="simOperatorCode">Operator Code</string>
    <string name="simOperatorName">Operator Name</string>
    <string name="simIMSI">Sim IMSI</string>
    <string name="voiceMailTextID">Voice Mail Text ID</string>
    <string name="voiceMailNumber">Voice Mail Number</string>
    <string name="phoneType">Phone Type</string>
    <string name="deviceIMEI">Device IMEI</string>


    <!--Device info-->
    <string name="phoneManufacture">Manufacture</string>
    <string name="phoneBrand">Brand</string>
    <string name="phoneModel">Model</string>
    <string name="phoneProduct">Product</string>
    <string name="phoneDisplay">Display</string>
    <string name="phoneOSVersion">OS Version</string>
    <string name="phoneHardware">Hardware</string>
    <string name="phoneBoard">Board</string>
    <string name="phoneCPUABI">CPU ABI</string>
    <string name="phoneCPUABI2">CPU ABI2</string>
    <string name="phoneDevice">Device</string>


    <!--System Info-->
    <string name="androidOSName">Android OS Name</string>
    <string name="androidVersion">Android Version</string>
    <string name="apiLevel">API Level</string>
    <string name="bootLoader">Boot Loader</string>
    <string name="buildID">Build ID</string>
    <string name="javaVM">Java VM</string>
    <string name="openGLES">OpenGL ES</string>
    <string name="kernelArchitecture">Kernel Architecture</string>
    <string name="kernelVersion">Kernel Version</string>
    <string name="rootAccess">Root Access</string>

    <!--Battery info-->
    <string name="batteryLevel">Battery Level</string>
    <string name="batteryTechnology">Technology</string>
    <string name="batteryPlugged">Plugged</string>
    <string name="batteryHealth">Health</string>
    <string name="batteryStatus">Status</string>
    <string name="batteryVoltage">Voltage</string>
    <string name="batteryTemperature">Temperature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
