<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.aspins.siminfo.DeviceInfotabs">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0"
        android:padding="@dimen/content_padding">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneManufacture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Manufacture"/>

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Manufacture_Name" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Brand" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Brand_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Model" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Model_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Product" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Product_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Display" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Display_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneOSVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_OS_Version" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_OS_Version_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneHardware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Hardware" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Hardware_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Board" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Board_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneCPUABI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_CPU_ABI" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_CPU_ABI_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneCPUABI2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_CPU_ABI_2" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_CPU_ABI_2_Name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Device" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Device_Name"/>

        </TableRow>
    </TableLayout>

</FrameLayout>
