<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.aspins.siminfo.SimInfoTab">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0"
        android:padding="@dimen/content_padding">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_number"/>

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Number_Digital" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/simSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/sim_Serial_Number" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/sim_Serial_Number_Digital"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/simCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/sim_Country_Code" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/sim_Country_Code_Text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/simState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/sim_State" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/sim_State_Digital"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/simOperatorCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/sim_Operator_Code" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/sim_Operator_Code_Text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/simOperatorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/sim_Operator_Name" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/sim_Operator_Name_Text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/simIMSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/sim_IMSI" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/sim_IMSI_Digital"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/voiceMailTextID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/voice_Mail_Text_ID" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/voice_Mail_Text_ID_Digital"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/voiceMailNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/voice_Mail_Number" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/voice_Mail_Number_Digital"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/phoneType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/phone_Type" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/phone_Type_Text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:textSize="@dimen/font_size_title"
                android:text="@string/deviceIMEI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textTitleColor"
                android:id="@+id/device_IMEI" />

            <TextView
                android:textSize="@dimen/font_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/textValueColor"
                android:textIsSelectable="true"
                android:id="@+id/device_IMEI_Digital"/>

        </TableRow>
    </TableLayout>

</FrameLayout>
